# nursepilot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  deploy-prod.yml
api/: Dockerfile  celery_app.py  main.py  pyproject.toml
api/routers/: charts.py  nurses.py
api/schemas/: __init__.py  common.py  patient_chart.py
api/tests/: test_charts.py  test_health.py  test_patient_chart.py
migrations/: env.py
migrations/versions/: 0001_initial_extractions.py
shared/: pyproject.toml
shared/db/: __init__.py  models.py  session.py
shared/schemas/: patient_chart.py
web/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: config.js
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/components/: ChartView.tsx  HistoryList.tsx  NeedsReview.tsx  SourceChip.tsx  Uploader.tsx  editing.tsx  grounding.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  tabs.tsx  tooltip.tsx
web/src/lib/: api.ts
web/src/types/: chart.ts
worker/: Dockerfile  config.py  eval.py  extraction.py  pyproject.toml  tasks.py  verification.py
worker/tests/: test_eval.py  test_extraction.py  test_persistence.py  test_tasks.py  test_verification.py
