[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.2",
    "uvicorn[standard]>=0.44.0",
    "celery>=5.6.3",
    "redis>=7.4.0",
    "python-multipart>=0.0.20",
    "shared",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
