[project]
name = "shared"
version = "0.1.0"
description = "Shared clinical schemas (PatientChart, SourceRef)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas"]
