[project]
name = "shared"
version = "0.1.0"
description = "Shared clinical schemas (PatientChart, SourceRef)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.2",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "db"]
